src/scss/block/type.scss
@import "~scss/_vars";

.blocks {
	.block.blockType { margin: 14px 0px 16px 0px !important; }
	.block.blockType { 
		.wrapMenu { visibility: hidden; }
		.focusable.isFocused { background: none; }

		.wrap { display: flex; justify-content: flex-start; gap: 10px; }

		.item { 
			position: relative; padding: 4px 8px; cursor: pointer; border-radius: 2px; border-radius: 6px; border: 1px solid $colorBorderDark; 
			display: inline-block; display: flex; align-items: center; gap: 0px 4px;
		}
		.item.hover { background: $colorHover; }

		.item {
			.icon.search { width: 12px; height: 12px; background-image: url('~img/icon/block/search.svg'); }
		}
	}
}

